--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ https://templatemo.com/tm-531-reflux
                    
                 </li>
                 <li>
-                  <a href="https://twitter.com/dev0828"><i class="fa fa-twitter"></i></a>
+                  <a href="http://linkedin.com/in/devshah7543"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="http://linkedin.com/in/devshah7543"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://twitter.com/devshah7543"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li>
                   <a href="mailto:devshah7543@gmail.com"
@@ -438,14 +438,12 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
                    
                 </li>
                 <li>
-                  <a href="https://twitter.com/dev0828"><button class="fa fa-twitter"></button></a>
-                </li>
-                <li>
                   <a href="http://linkedin.com/in/devshah7543"><button class="fa fa-linkedin"></button></a>
                 </li>
                 <li>
-                  <a href="mailto:devshah7543@gmail.com"
-                    ><button class="fa fa-envelope-o"></button
+                  <a href="https://twitter.com/devshah7543"><button class="fa fa-twitter"></button></a>
+                </li>
+                <li><a href="mailto:devshah7543@gmail.com"><button class="fa fa-envelope-o"></button
                   ></a>
                 </li>
               </ul>
