--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ https://templatemo.com/tm-531-reflux
                     ><i class="fa fa-envelope-o"></i
                   ></a>
                 </li>
+                <li>
+                  <a href="https://codeforces.com/profile/devshah7543"><i class="fa fa-code"></i></a>
+                </li>
               </ul>
             </div>
             <div class="copyright-text">
@@ -424,7 +427,8 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
           </div>
         </div><br><br>
       </section>
-
+        
+        
       <section class="section contact-me" data-section="section4">
         <div class="container">
           <div class="section-heading">
@@ -444,6 +448,9 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
                   <a href="https://twitter.com/devshah7543"><button class="fa fa-twitter"></button></a>
                 </li>
                 <li><a href="mailto:devshah7543@gmail.com"><button class="fa fa-envelope-o"></button
+                  ></a>
+                </li>
+                <li><a href="https://codeforces.com/profile/devshah7543"><button class="fa fa-code"></button
                   ></a>
                 </li>
               </ul>
