--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-531-reflux
                 <p>
                 <br>
                  • Microsoft Excel<br> 
-                 • Tableau
+                 • Tableauuuu
                 </p>
               </div>
             </div>
