--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
               </ul>
             </div>
           </div>
+          <!--
           <div class="row">
             <div class="right-content">
               <div class="container">
@@ -520,8 +521,8 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
                 </form>
               </div>
             </div>
-          </div>
-        </div><br><br>
+          </div> -->
+        </div>
       </section>
     </div>
 
