--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@ https://templatemo.com/tm-531-reflux
                   <h4>Computer Engineering Pre-Final Year student</h4>
                   <p>
                     I am currently pursuing Computer Engineering. My core interests lie in the field of Web Development and Data Science. Recently, I have been exploring the vast scope of Data Science and am totally fascinated by the application it has in real life and more so, in drastically improving the near future.
-                    <br>
-                    Everyone has opinions, but data is something that can truly drive actions. Data actually tells you what to do next, be it any field. As it is rightly said, the goal is to turn data into information & information into insights ! <br>
-Coming to my passion for building websites, I love how different pieces of code turn out into a highly functional & an interactive space with easier access. I feel that one should build a website before we build a workplace. A website brings in the essence of trust, easy access and wider reach for any organisation, business or a professional. A well curated website can help you multiply your credibility. In the process of refining my skills for the same.
-<br>The basic objective is to just try and improve everyday and be a better version of myself !
-Hit me up if you share some common interests and are willing to discuss some crazy ideas.
+                    <br><br>
+                    Everyone has opinions, but data is something that can truly drive actions. Data actually tells you what to do next, be it any field. As it is rightly said, the goal is to turn data into information & information into insights ! 
+                    <br><br>
+                    Coming to my passion for building websites, I love how different pieces of code turn out into a highly functional & an interactive space with easier access. I feel that one should build a website before we build a workplace. A website brings in the essence of trust, easy access and wider reach for any organisation, business or a professional. A well curated website can help you multiply your credibility. In the process of refining my skills for the same.
+                    <br><br>
+                    The basic objective is to just try and improve everyday and be a better version of myself !
+                    <br><br>
+                    Hit me up if you share some common interests and are willing to discuss some crazy ideas.
                   </p>
-                  <div class="white-button">
-                    <a href="#">Read More</a>
-                  </div>
+                
                   <br><br>
                 </div>
               
