--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-531-reflux
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
                 <li><a href="#section5">Education</a></li>
-                <li><a href="#section2">What I’m good at</a></li>
+                <li><a href="#section2">What I’m good at?</a></li>
                 <li><a href="#section3">My Work</a></li>
                 <li><a href="#section4">Contact Me</a></li>
               </ul>
