--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ facilitating better understanding of the Scheduling Algorithms and its types</sp
                     />
                     <figcaption>
                       <a
-                        href="https://devshah7543.github.io/Scheduling-Algorithm/"
+                        href="https://devshah7543.github.io/pdeu/"
                         
                         data-title="Caption"
                         >
