--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
 
     <title>Dev Shah</title>
+    <link rel = "icon" href = "title.png" type = "image/x-icon"> 
+        <link href="https://fonts.googleapis.com/css?family=Oswald:400" rel="stylesheet"> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
